unity ignore list & meta file commit

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 *.log
 *.caffemodel
 *.csproj
+Visualizer_unity/DeepHandposVisulizer/Library/
+Visualizer_unity/DeepHandposVisulizer/Temp/
+Visualizer_unity/DeepHandposVisulizer/Obj/
