unity dll project setting complete.
TO-DO
1. dll implement ( leap connector, probability calculate..)
2. controller script implement
3. caffe build & implement

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 Visualizer_unity/DeepHandposVisulizer/Library/
 Visualizer_unity/DeepHandposVisulizer/Temp/
 Visualizer_unity/DeepHandposVisulizer/Obj/
+*.exp
