--- a/Visualizer_unity/DeepHandposVisulizer/DllProject/LeepDll/LeepDll/LeepDll.vcxproj
+++ b/Visualizer_unity/DeepHandposVisulizer/DllProject/LeepDll/LeepDll/LeepDll.vcxproj
@@ -78,8 +78,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)\..\..</OutDir>
-    <IncludePath>$(SolutionDir)include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)include;C:\Users\VisionTeam\Documents\DeepHandPoseRecognizer\Visualizer_unity\DeepHandposVisulizer\DllProject\LeepDll\lib\x64;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)lib\x64;C:\Users\VisionTeam\Documents\DeepHandPoseRecognizer\Visualizer_unity\DeepHandposVisulizer\DllProject\LeepDll\include;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -139,6 +139,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>Leap.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
