ignore list merge

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ Visualizer_unity/DeepHandposVisulizer/Library/
 Visualizer_unity/DeepHandposVisulizer/Temp/
 Visualizer_unity/DeepHandposVisulizer/Obj/
 *.exp
+*.jpg
+*.dat
+*.txt
