빌드 되는 상태로 커밋. Data load layer 작업

--- a/Caffe/windows/caffe/caffe.vcxproj
+++ b/Caffe/windows/caffe/caffe.vcxproj
@@ -58,6 +58,7 @@
     </PostBuildEvent>
     <ClCompile>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions);CAFFE_VERSION=1.0.0-rc3</PreprocessorDefinitions>
+      <TreatWarningAsError>false</TreatWarningAsError>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
