-caffe parameter setting -data load layer interface inplement *이후 쓰레드 함수, 데이터 인덱스 저장 구현

--- a/Caffe/windows/libcaffe/libcaffe.vcxproj.filters
+++ b/Caffe/windows/libcaffe/libcaffe.vcxproj.filters
@@ -336,6 +336,9 @@
     <ClCompile Include="..\..\src\caffe\util\signal_handler.cpp">
       <Filter>src\util</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\caffe\layers\leap_predata_layer.cpp">
+      <Filter>src\layers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\caffe\proto\caffe.pb.h">
@@ -636,6 +639,9 @@
       <Filter>include\layers</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\caffe\layers\scale_layer.hpp">
+      <Filter>include\layers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\caffe\layers\leap_predata_layer.hpp">
       <Filter>include\layers</Filter>
     </ClInclude>
   </ItemGroup>
