--- a/Caffe/windows/libcaffe/libcaffe.vcxproj.filters
+++ b/Caffe/windows/libcaffe/libcaffe.vcxproj.filters
@@ -339,6 +339,9 @@
     <ClCompile Include="..\..\src\caffe\layers\leap_predata_layer.cpp">
       <Filter>src\layers</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\caffe\layers\euclidean_dist_layer.cpp">
+      <Filter>src\layers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\caffe\proto\caffe.pb.h">
@@ -642,6 +645,9 @@
       <Filter>include\layers</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\caffe\layers\leap_predata_layer.hpp">
+      <Filter>include\layers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\caffe\layers\euclidean_dist_layer.hpp">
       <Filter>include\layers</Filter>
     </ClInclude>
   </ItemGroup>
