돌아가게 버그 수정

--- a/Caffe/windows/caffe/caffe.vcxproj
+++ b/Caffe/windows/caffe/caffe.vcxproj
@@ -59,6 +59,7 @@
     <ClCompile>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions);CAFFE_VERSION=1.0.0-rc3</PreprocessorDefinitions>
       <TreatWarningAsError>false</TreatWarningAsError>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
