pretrain-single image commit

--- a/Caffe/windows/libcaffe/libcaffe.vcxproj.filters
+++ b/Caffe/windows/libcaffe/libcaffe.vcxproj.filters
@@ -342,6 +342,9 @@
     <ClCompile Include="..\..\src\caffe\layers\euclidean_dist_layer.cpp">
       <Filter>src\layers</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\caffe\layers\leap_predata_single_layer.cpp">
+      <Filter>src\layers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\caffe\proto\caffe.pb.h">
@@ -648,6 +651,9 @@
       <Filter>include\layers</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\caffe\layers\euclidean_dist_layer.hpp">
+      <Filter>include\layers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\caffe\layers\leap_predata_single_layer.hpp">
       <Filter>include\layers</Filter>
     </ClInclude>
   </ItemGroup>
