Leap data layer 구현중 파일 디렉토리에서 긁어오는 부분구현 -이후 multi threading 부분 구현

--- a/Caffe/windows/libcaffe/libcaffe.vcxproj.filters
+++ b/Caffe/windows/libcaffe/libcaffe.vcxproj.filters
@@ -345,6 +345,9 @@
     <ClCompile Include="..\..\src\caffe\layers\leap_predata_single_layer.cpp">
       <Filter>src\layers</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\caffe\layers\leap_data_layer.cpp">
+      <Filter>src\layers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\caffe\proto\caffe.pb.h">
@@ -654,6 +657,9 @@
       <Filter>include\layers</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\caffe\layers\leap_predata_single_layer.hpp">
+      <Filter>include\layers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\caffe\layers\leap_data_layer.hpp">
       <Filter>include\layers</Filter>
     </ClInclude>
   </ItemGroup>
