--- a/Caffe/windows/libcaffe/libcaffe.vcxproj
+++ b/Caffe/windows/libcaffe/libcaffe.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="..\..\src\caffe\layers\infogain_loss_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\inner_product_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\input_layer.cpp" />
+    <ClCompile Include="..\..\src\caffe\layers\leap_data_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\leap_predata_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\leap_predata_single_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\log_layer.cpp" />
@@ -245,6 +246,7 @@
     <ClInclude Include="..\..\include\caffe\layers\infogain_loss_layer.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\inner_product_layer.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\input_layer.hpp" />
+    <ClInclude Include="..\..\include\caffe\layers\leap_data_layer.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\leap_predata_layer.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\leap_predata_single_layer.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\log_layer.hpp" />
