--- a/Caffe/windows/libcaffe/libcaffe.vcxproj
+++ b/Caffe/windows/libcaffe/libcaffe.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="..\..\src\caffe\layers\leap_data_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\leap_predata_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\leap_predata_single_layer.cpp" />
+    <ClCompile Include="..\..\src\caffe\layers\leap_single_data_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\log_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\loss_layer.cpp" />
     <ClCompile Include="..\..\src\caffe\layers\lrn_layer.cpp" />
@@ -249,6 +250,7 @@
     <ClInclude Include="..\..\include\caffe\layers\leap_data_layer.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\leap_predata_layer.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\leap_predata_single_layer.hpp" />
+    <ClInclude Include="..\..\include\caffe\layers\leap_single_data_layer.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\log_layer.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\loss_layer.hpp" />
     <ClInclude Include="..\..\include\caffe\layers\lrn_layer.hpp" />
