--- a/Visualizer_unity/DeepHandposVisulizer/DllProject/LeepDll/LeepDll/LeepDll.vcxproj.filters
+++ b/Visualizer_unity/DeepHandposVisulizer/DllProject/LeepDll/LeepDll/LeepDll.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClCompile Include="dllMain.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ResHandClient.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="openCV.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="leapMotion.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ResHandClient.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
